--- a/SimpleBLE.ioc
+++ b/SimpleBLE.ioc
@@ -2,9 +2,45 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-FREERTOS.Events01=
+Dma.LPUART1_TX.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.LPUART1_TX.0.EventEnable=DISABLE
+Dma.LPUART1_TX.0.Instance=DMA1_Channel1
+Dma.LPUART1_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.LPUART1_TX.0.MemInc=DMA_MINC_ENABLE
+Dma.LPUART1_TX.0.Mode=DMA_NORMAL
+Dma.LPUART1_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.LPUART1_TX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.LPUART1_TX.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.LPUART1_TX.0.Priority=DMA_PRIORITY_LOW
+Dma.LPUART1_TX.0.RequestNumber=1
+Dma.LPUART1_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.LPUART1_TX.0.SignalID=NONE
+Dma.LPUART1_TX.0.SyncEnable=DISABLE
+Dma.LPUART1_TX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.LPUART1_TX.0.SyncRequestNumber=1
+Dma.LPUART1_TX.0.SyncSignalID=NONE
+Dma.Request0=LPUART1_TX
+Dma.Request1=UART4_TX
+Dma.RequestsNb=2
+Dma.UART4_TX.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.UART4_TX.1.EventEnable=DISABLE
+Dma.UART4_TX.1.Instance=DMA1_Channel2
+Dma.UART4_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.UART4_TX.1.MemInc=DMA_MINC_ENABLE
+Dma.UART4_TX.1.Mode=DMA_NORMAL
+Dma.UART4_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.UART4_TX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.UART4_TX.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.UART4_TX.1.Priority=DMA_PRIORITY_LOW
+Dma.UART4_TX.1.RequestNumber=1
+Dma.UART4_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.UART4_TX.1.SignalID=NONE
+Dma.UART4_TX.1.SyncEnable=DISABLE
+Dma.UART4_TX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.UART4_TX.1.SyncRequestNumber=1
+Dma.UART4_TX.1.SyncSignalID=NONE
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,FootprintOK,MEMORY_ALLOCATION,Events01
+FREERTOS.IPParameters=Tasks01,FootprintOK,MEMORY_ALLOCATION
 FREERTOS.MEMORY_ALLOCATION=1
 FREERTOS.Tasks01=comTask,0,256,StartComTask,As weak,NULL,Static,comTaskBuffer,comTaskControlBlock;bleTask,2,256,StartBleTask,As external,NULL,Static,myBleTaskBuffer,myBleTaskControlBlock
 File.Version=6
@@ -14,13 +50,14 @@ LPUART1.IPParameters=BaudRate,WordLength
 LPUART1.WordLength=UART_WORDLENGTH_8B
 Mcu.CPN=STM32G491RET6
 Mcu.Family=STM32G4
-Mcu.IP0=FREERTOS
-Mcu.IP1=LPUART1
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IP5=UART4
-Mcu.IPNb=6
+Mcu.IP0=DMA
+Mcu.IP1=FREERTOS
+Mcu.IP2=LPUART1
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SYS
+Mcu.IP6=UART4
+Mcu.IPNb=7
 Mcu.Name=STM32G491R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -46,10 +83,13 @@ Mcu.UserName=STM32G491RETx
 MxCube.Version=6.9.1
 MxDb.Version=DB.6.0.91
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.DMA1_Channel1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA1_Channel2_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.EXTI15_10_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.LPUART1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false\:false
@@ -62,6 +102,7 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
 NVIC.TIM7_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM7_IRQn
 NVIC.TimeBaseIP=TIM7
+NVIC.UART4_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=T_SWDIO
@@ -143,7 +184,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_LPUART1_UART_Init-LPUART1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,5-MX_UART4_Init-UART4-false-HAL-true
 RCC.ADC12Freq_Value=170000000
 RCC.ADC345Freq_Value=170000000
 RCC.AHBFreq_Value=170000000
