--- a/SimpleBLE.ioc
+++ b/SimpleBLE.ioc
@@ -237,6 +237,8 @@ RCC.VCOInputFreq_Value=4000000
 RCC.VCOOutputFreq_Value=340000000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+UART4.BaudRate=9600
+UART4.IPParameters=BaudRate
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
 VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
