message queue between ble and vcom tasks

--- a/SimpleBLE.ioc
+++ b/SimpleBLE.ioc
@@ -40,8 +40,9 @@ Dma.UART4_TX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
 Dma.UART4_TX.1.SyncRequestNumber=1
 Dma.UART4_TX.1.SyncSignalID=NONE
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,FootprintOK,MEMORY_ALLOCATION
+FREERTOS.IPParameters=Tasks01,FootprintOK,MEMORY_ALLOCATION,Queues01
 FREERTOS.MEMORY_ALLOCATION=1
+FREERTOS.Queues01=resQueue,8,resmsg_t,0,Static,resQueueBuffer,resQueueControlBlock
 FREERTOS.Tasks01=comTask,0,256,StartComTask,As weak,NULL,Static,comTaskBuffer,comTaskControlBlock;bleTask,2,256,StartBleTask,As external,NULL,Static,myBleTaskBuffer,myBleTaskControlBlock
 File.Version=6
 KeepUserPlacement=false
